--- a/config/simple.conf
+++ b/config/simple.conf
@@ -3,13 +3,13 @@ server {
 	host		localhost;
 	root		./content;
 
-	error_page	400 error/400.html;
-	error_page	403 error/403.html;
-	error_page	404 error/404.html;
-	error_page	405 error/405.html;
-	error_page	413 error/413.html;
-	error_page	415 error/415.html;
-	error_page	500 error/500.html;
+	error_page	400 errors/400.html;
+	error_page	403 errors/403.html;
+	error_page	404 errors/404.html;
+	error_page	405 errors/405.html;
+	error_page	413 errors/413.html;
+	error_page	415 errors/415.html;
+	error_page	500 errors/500.html;
 
 	dir_list	html/dirlistTemplate.html;
 	allow		GET;
@@ -18,8 +18,6 @@ server {
 		allow			GET POST;
 		index			html/index.html;
 		root			content;
-		error_page 404 	error/404.html;
-		error_page 400 	error/400.html;
 		cgi				on;
 		cgi_extension	.py;
 		cgi_pass		/usr/bin/python3;
@@ -58,7 +56,6 @@ server {
 	location / {
 		index			html/index.html
 		root			content;
-		error_page 404 	error/404.html;
 	}
 }
 
@@ -69,7 +66,6 @@ server {
 	location / {
 		index			html/index.html
 		root			content;
-		error_page 404	error/404.html;
 	}
 }
 
@@ -80,7 +76,6 @@ server {
 	location / {
 		index			html/index.html
 		root			content;
-		error_page 404	error/404.html;
 	}
 }
 
@@ -91,6 +86,5 @@ server {
 	location / {
 		index			html/index.html
 		root			content;
-		error_page 404	error/404.html;
 	}
 }
