--- a/config/webserv.conf
+++ b/config/webserv.conf
@@ -6,9 +6,11 @@ error_page 405  errors/405.html;
 
 server {
     listen 8080;
+	server_name webserv_default;
     host localhost;
+	allow GET POST DELETE;
     root ./www;
-    index index.html;
+    index 01-pages;
 
     location / {
         autoindex off;
@@ -16,20 +18,20 @@ server {
     }
 
     location /errors {
-        root ./errors;
+        root errors;
         allow GET;
         autoindex off;
     }
 
     location /upload {
-        root ./www/uploads;
+        root uploads;
         allow POST;
         autoindex on;
         client_max_body_size 50M;
     }
 
     location /cgi-bin/ {
-        root ./www/cgi-bin;
+        root cgi-bin;
         cgi on;
         cgi_extension .py;
         cgi_pass /usr/bin/python3;
@@ -42,7 +44,7 @@ server {
 
     location /new-location {
         allow GET;
-        root ./www/new-location;
+        root new-location;
         autoindex off;
     }
 }
