root fallback at config

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,20 +1,21 @@
 client_max_body_size 10M;
+error_page 404  errors/404.html;
+error_page 500  errors/500.html;
+error_page 403  errors/403.html;
+error_page 405  errors/405.html;
 
 server {
     listen 8080;
-    server_name HARDCODED_SERVER;
-    root /home/gkoksal/Desktop/webserv2;
+    server_name localhost;
     index www/01-pages;
     allow GET POST DELETE;
 
-    # This maps "/" to "www/01-pages/index.html"
     location / {
         root www/01-pages;
         index index.html;
         allow GET;
     }
 
-    # This maps "/multipart" to "www/01-pages/message.html"
     location /multipart {
         root www/01-pages;
         index message.html;
