directory listing debug

--- a/config/autoindex.conf
+++ b/config/autoindex.conf
@@ -76,8 +76,14 @@ server {
     root www/cgi-bin;
   }
 
-  location /dir {
-    root www;
-    index hi.txt;
+  # this one should print the main file
+  location /dir1 {
+    root src;
+    index main.cpp;
+  }
+
+  # this one should produce a listing
+  location /dir2 {
+    root src;
   }
 }
