--- a/config/port.conf
+++ b/config/port.conf
@@ -3,7 +3,7 @@ error_page 400 errors/400.html;
 error_page 404 errors/404.html;
 error_page 500 errors/500.html;
 
-# First server on port 8080
+# First server on port 8080 (default server)
 server {
     listen 8080;
     server_name localhost;
@@ -16,43 +16,25 @@ server {
         allow GET;
     }
 
-    location /multipart {
-        root www/01-pages;
-        index message.html;
-        allow GET;
-    }
-
     location /upload {
         root www/02-received;
         allow GET POST DELETE;
     }
 
-    location /01-pages/nested {
-        root www/01-pages/nested;
-    }
-
     location /cgi-bin {
         root www/cgi-bin;
     }
-
-    location /03-stash {
-        root www/03-stash;
-        allow GET POST;
-    }
-
-    location /google {
-        return 301 http://google.com;
-    }
 }
-# Second server on port 8081
+
+# Second server also on port 8080
 server {
-    listen 8081;
-    server_name test1;
-    index www/test-server-1;
+    listen 8080;
+    server_name example.com;
+    index www/test-server1;
     allow GET POST DELETE;
 
     location / {
-        root www/test-server-1;
+        root www/test-server1;
         index index.html;
         allow GET;
     }
@@ -63,10 +45,10 @@ server {
     }
 }
 
-# Third server on port 8082
+# Third server also on port 8080
 server {
-    listen 8082;
-    server_name test2;
+    listen 8080;
+    server_name test.com;
     index www/test-server-2;
     allow GET;
 
