--- a/config/multi.conf
+++ b/config/multi.conf
@@ -3,10 +3,11 @@ error_page 400 errors/400.html;
 error_page 404 errors/404.html;
 error_page 500 errors/500.html;
 
-# First server on port 8080
+# All 3 servers on the same port: 8080, but with different hostnames:
+#   test1, test2, test3
 server {
     listen 8080;
-    server_name localhost;
+    server_name test1;
     index www/01-pages;
     allow GET POST DELETE;
 
@@ -44,10 +45,10 @@ server {
         return 301 http://google.com;
     }
 }
-# Second server on port 8081
+
 server {
-    listen 8081;
-    server_name test1;
+    listen 8080;
+    server_name test2;
     index www/test-server-1;
     allow GET POST DELETE;
 
@@ -63,10 +64,9 @@ server {
     }
 }
 
-# Third server on port 8082
 server {
-    listen 8082;
-    server_name test2;
+    listen 8080;
+    server_name test3;
     index www/test-server-2;
     allow GET;
 
