added a more complete multi-port multi-server test

--- a/config/multi.conf
+++ b/config/multi.conf
@@ -3,11 +3,12 @@ error_page 400 errors/400.html;
 error_page 404 errors/404.html;
 error_page 500 errors/500.html;
 
-# All 3 servers on the same port: 8080, but with different hostnames:
-#   test1, test2, test3
+# Two pairs of servers:
+#   1. port 8001 - hostnames: test11, test 12
+#   2. port 8002 - hostnames: test21, test 22
 server {
-    listen 8080;
-    server_name test1;
+    listen 8001;
+    server_name test11;
     index www/01-pages;
     allow GET POST DELETE;
 
@@ -47,8 +48,8 @@ server {
 }
 
 server {
-    listen 8080;
-    server_name test2;
+    listen 8001;
+    server_name test12;
     index www/test-server-1;
     allow GET POST DELETE;
 
@@ -64,14 +65,33 @@ server {
     }
 }
 
+
+# This is the second pair
+
 server {
-    listen 8080;
-    server_name test3;
+    listen 8002;
+    server_name test21;
     index www/test-server-2;
     allow GET;
 
     location / {
         root www/test-server-2;
+        index index.html;
+        allow GET;
+    }
+
+    # Different error page for this server
+    error_page 404 errors/custom404.html;
+}
+
+server {
+    listen 8002;
+    server_name test22;
+    index www/test-server-3;
+    allow GET;
+
+    location / {
+        root www/test-server-3;
         index index.html;
         allow GET;
     }
