--- a/config/port.conf
+++ b/config/port.conf
@@ -5,7 +5,7 @@ error_page 500 errors/500.html;
 
 # First server on port 8080 (default server)
 server {
-    listen 8080;
+    listen 8080 3000;
     server_name localhost;
     index www/01-pages;
     allow GET POST DELETE;
@@ -30,11 +30,11 @@ server {
 server {
     listen 8080;
     server_name example.com;
-    index www/test-server1;
+    index www/test-server-1;
     allow GET POST DELETE;
 
     location / {
-        root www/test-server1;
+        root www/test-server-1;
         index index.html;
         allow GET;
     }
