removed extra port

--- a/config/port.conf
+++ b/config/port.conf
@@ -5,7 +5,7 @@ error_page 500 errors/500.html;
 
 # First server on port 8080 (default server)
 server {
-    listen 8080 3000;
+    listen 8080;
     server_name localhost;
     index www/01-pages;
     allow GET POST DELETE;
